# kenya

./: .gitignore  LICENSE.md  README.md  comandos_entornos  notas  rf_biometrics_clasificator.py
kenya-vision/: README.md  (+1 more)
mostacho_tflite2.2/: README.md  pyproject.toml
mostacho_tflite2.2/artifacts/reports/tflite_metrics/: drowsiness_keras_vs_int8.json  summary.md  summary_metrics.json
mostacho_tflite2.2/requirements/: distraction_pipeline.txt
mostacho_tflite2.2/scripts/: export_runtime_tflite_int8.py  report_tflite_models.py  run_runtime.sh
mostacho_tflite2.2/src/mostacho/: eye_state.py  realtime_monitor.py  schemas.py  settings.py
mostacho_tflite2.2/src/mostacho/services/: tf_api.py  tf_inference_worker.py  tf_subprocess.py
mostacho_tflite2.2/src/mostacho/vision/: __init__.py  runtime.py
mostacho_v2.2/: README.md  android_inference_example.kt  pyproject.toml  run_all.sh
mostacho_v2.2/.mplconfig/: fontlist-v390.json
mostacho_v2.2/requirements/: camera.txt  face_service.txt
mostacho_v2.2/scripts/: report_models_v22.py
mostacho_v2.2/src/mostacho/: realtime_monitor.py
mostacho_v2.2/src/mostacho_v2_2.egg-info/: PKG-INFO  SOURCES.txt
mostacho_v2_noTFLiteInt8/: README.md  pyproject.toml
mostacho_v2_noTFLiteInt8/artifacts/models/: drowsiness_vision_classes.txt  drowsiness_vision_report.json
mostacho_v2_noTFLiteInt8/docs/: LINE_BY_LINE_INDEX.md
mostacho_v2_noTFLiteInt8/docs/line_by_line/: __init__.py.md
mostacho_v2_noTFLiteInt8/scripts/windows/: run_services.ps1
mostacho_v2_noTFLiteInt8/src/mostacho/: cli.py  schemas.py  settings.py
(+143 files in other folders)
