[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mostacho"
version = "0.1.0"
description = "Pipeline multimodal para deteccion de estados del conductor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mostacho Team" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
